--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,8 +7,11 @@
     <string name="title_section2">Activity Recording</string>
     <string name="title_section3">Activity Recognition</string>
 
-    
-    
+    <string-array name="displayType">
+        <item>Raw Data</item>
+        <item>LPF Data</item>
+        <item>FFT Data</item>
+    </string-array>
     <string-array name="actTypeArray">
         <item>Walking (0)</item>
         <item>Running (1)</item>
@@ -18,6 +21,5 @@
         <item>Standing up (5)</item>
         <item>Jumping (6)</item>
     </string-array>
-    
-    
+
 </resources>
