Mobile NGC Classifier running on local activity library.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,7 @@
         <item>Jumping (6)</item>
         <item>Test: Wave Sideways (7)</item>
         <item>Test: Wave Forward (8)</item>
+        <item>Test: Unknown (9)</item>
         
         
     </string-array>
