Type inheritance option when rec.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,7 +16,7 @@
     </string-array>
     <string-array name="actTypeArray">
         <item>Walking (0)</item>
-        <item>Running (1)</item>
+        <item>Fast Walking (1)</item>
         <item>Walking up the stairs (2)</item>
         <item>Walking down the stairs (3)</item>
         <item>Sitting (4)</item>
