--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,8 +22,8 @@
         <item>Sitting (4)</item>
         <item>Standing up (5)</item>
         <item>Jumping (6)</item>
-        <item>Test: Wave Sideways (7)</item>
-        <item>Test: Wave Forward (8)</item>
+        <item>Cycling (7)</item>
+        <item>Running (8)</item>
         <item>Test: Unknown (9)</item>
         
         
